--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
+
     <string name="app_name">Ads SDK</string>
     <string name="btn_show_interstitial_ad">Show Interstitial Ad</string>
     <string name="btn_show_rewarded_ad">Show Rewarded Video Ad</string>
+    <string name="btn_show_native_ad">Show Native Ad</string>
+    <string name="btn_show_choose_ad">Choose Ad</string>
+
 </resources>
